fixed the layout problem

--- a/programs.css
+++ b/programs.css
@@ -1,59 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
-body{
-    background: #bababa;
-}
-.small-6 {
-    margin-top: 10%;
-}
-
-p{
-    text-align: center;
-}
-
-
-
-.right{
-    width: 55%;
-}
-.left{
-    opacity: 0.9;
-    background: #FC017D;
-    width: 50%;
-    margin-top: -30%;
-    /*height: 60vh;*/
-
-}
-
-.second{
-    opacity: 0.9;
-    background: #FC017D;
-    width: 65%;
-}
-
-
-.third{
-    width: 55%;
-    margin-top: -25%;
-}
-
-
-.fourth{
-    width: 55%;
-}
-.fifth{
-    opacity: 0.9;
-    background: #FC017D;
-    width: 50%;
-    margin-top: -30%;
-
-}
-
-.thumbnail {
-    margin-top: 5%;
-    margin-left: 15%;
-}
-
-
 
 footer{
     background: #757575;
